# ScorewarriorTestTask

./: CMakeLists.txt  main.cpp  script.txt
models/: engine_command.cpp  engine_command.hpp  game.cpp  game.hpp  unit.hpp
utils/: input_parser.cpp  input_parser.hpp
